[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Shikigami.gd" type="Script" id=1]
[ext_resource path="res://assets/enemies/shikigami/state_float.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/shikigami/state_fold.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/shikigami/state_shoot.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 2 ) ],
"loop": true,
"name": "float",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 3 ) ],
"loop": true,
"name": "fold",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 4 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25, 50 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.230469, 0.187256, 0.187256, 0.569059 )

[node name="Shikigami" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="Shikigami" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "float"

[node name="stateClock" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="foldClock" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="shootClock" type="Timer" parent="."]
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="HUD" type="Node2D" parent="."]
position = Vector2( -32, -67 )

[node name="ProgressBar" type="ProgressBar" parent="HUD"]
margin_top = 10.0
margin_right = 64.0
margin_bottom = 16.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
max_value = 10.0
step = 1.0
value = 10.0
percent_visible = false

[connection signal="animation_finished" from="Shikigami" to="." method="_on_Shikigami_animation_finished"]
[connection signal="timeout" from="stateClock" to="." method="_on_stateClock_timeout"]
[connection signal="timeout" from="foldClock" to="." method="_on_foldClock_timeout"]
[connection signal="timeout" from="shootClock" to="." method="_on_shootClock_timeout"]
